--- a/aroma-therapy.html
+++ b/aroma-therapy.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home</title>
+    <title>Aroma Therapy | Sparsha Ayurveda</title>
+    <link rel="icon" href="img/favicon.jpg" type="image">
+    <meta name="description" content="Sparsha Ayurveda: Ayurvedic Treatments - Panchakarma, Cosmetology, Aromatherapy">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700|Work+Sans:700|PT+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Great+Vibes&display=swap" rel="stylesheet">
@@ -18,8 +20,10 @@
                     <div class="navbar-header">
                         <div class="col-xs-12 no-padding md-header logo-wrapper hidden-xs">
                            <!--  <img class="img-responsive" src="img/logo.png"> -->
+                        <a href="./homepage.html">
                             <h1>SPARSHA AYURVEDA</h1>
                             <h3>The Touch of Wellness</h3>
+                        </a>
                         </div>
                         <div class="mobile-header logo-wrapper visible-xs">
                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -28,8 +32,8 @@
                                 <span class="icon-bar"></span> 
                             </button>
                            <!--  <img class="img-responsive" src="img/logo.png"> -->
-                            <a class="navbar-brand" href="#">SPARSHA AYURVEDA</a>
-                            <a class="navbar-brand caption" href="#">The Touch of Wellness</a>
+                            <a class="navbar-brand" href="./homepage.html">SPARSHA AYURVEDA</a>
+                            <a class="navbar-brand caption" href="./homepage.html">The Touch of Wellness</a>
                         </div>
                     </div>
                     <div class="collapse navbar-collapse" id="myNavbar">
@@ -47,8 +51,8 @@
                                     </ul>
                                 </div>
                             </li>
-                            <li><a href="#">Book online</a></li>
-                            <li><a href="#">Contact</a></li>
+                           <!-- <li><a href="./book-online.html">Book online</a></li> -->
+                            <li><a href="./contact.html">Contact</a></li>
                         </ul>
                     </div>
                 </div>
@@ -73,17 +77,17 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="row">
-                    <div class="col-xs-12 col-sm-3 def-image">
+                    <div class="col-xs-12 col-sm-3 def-image oil-book">
                         <img class="img-responsive" src="img/oil.jpg">
                     </div>
                     <div class="col-xs-12 col-sm-3 def-image">
-                        <img class="img-responsive" src="img/oil.jpg">
+                        <img class="img-responsive" src="img/aroma1.jpg">
                     </div>
                     <div class="col-xs-12 col-sm-3 def-image">
-                        <img class="img-responsive" src="img/oil.jpg">
+                        <img class="img-responsive" src="img/aroma2.jpg">
                     </div>
                     <div class="col-xs-12 col-sm-3 def-image">
-                        <img class="img-responsive" src="img/oil.jpg">
+                        <img class="img-responsive" src="img/aroma3.jpg">
                     </div>
                 </div>
             </div>
@@ -98,11 +102,8 @@
             </div>
         </div>
     </footer>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular.min.js"></script>
 <script src="js/ui-bootstrap-tpls-2.5.0.min.js"></script>
-<script src="js/app.js"></script>
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
-<script src="js/header.js"></script>
 </body>
 </html>
