--- a/panchakarma.html
+++ b/panchakarma.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home</title>
+    <title>Panchakarma | Sparsha Ayurveda</title>
+    <link rel="icon" href="img/favicon.jpg" type="image">
+    <meta name="description" content="Sparsha Ayurveda: Ayurvedic Treatments - Panchakarma, Cosmetology, Aromatherapy">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700|Work+Sans:700|PT+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Great+Vibes&display=swap" rel="stylesheet">
@@ -14,46 +16,49 @@
 <body>
     <header>
         <nav class="navbar navbar-default logo-wrapper">
-                <div class="container-fluid">
-                    <div class="navbar-header">
-                        <div class="col-xs-12 no-padding md-header logo-wrapper hidden-xs">
-                           <!--  <img class="img-responsive" src="img/logo.png"> -->
-                            <h1>SPARSHA AYURVEDA</h1>
-                            <h3>The Touch of Wellness</h3>
-                        </div>
-                        <div class="mobile-header logo-wrapper visible-xs">
-                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span> 
-                            </button>
-                           <!--  <img class="img-responsive" src="img/logo.png"> -->
-                            <a class="navbar-brand" href="#">SPARSHA AYURVEDA</a>
-                            <a class="navbar-brand caption" href="#">The Touch of Wellness</a>
-                        </div>
-                    </div>
-                    <div class="collapse navbar-collapse" id="myNavbar">
-                        <ul class="nav navbar-nav">
-                            <li><a href="./homepage.html">Home</a></li>
-                            <li><a href="./ayurveda.html">Ayurveda</a></li>
-                            <li class="treatment-hover">
-                                <a class="visible-xs" data-toggle="collapse" href="#menu" aria-expanded="false" aria-controls="menu">Treatments<span class="collapse-icon"></span></a>
-                                <a class="visible-md visible-lg" href="./treatments.html">Treatments</a>
-                                <div id="menu" class="collapse treatments">
-                                    <ul>
-                                        <li><a href="./panchakarma.html">PANCHAKARMA</a></li>
-                                        <li><a href="./aroma-therapy.html">AROMATHERAPY</a></li>
-                                        <li><a href="./cosmetology.html">COSMTELOGY TREATMENTS</a></li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li><a href="#">Book online</a></li>
-                            <li><a href="#">Contact</a></li>
-                        </ul>
-                    </div>
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <div class="col-xs-12 no-padding md-header logo-wrapper hidden-xs">
+                     <!--  <img class="img-responsive" src="img/logo.png"> -->
+                      <a href="./homepage.html">
+                         <h1>SPARSHA AYURVEDA</h1>
+                         <h3>The Touch of Wellness</h3>
+                    </a>
+                 </div>
+                 <div class="mobile-header logo-wrapper visible-xs">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span> 
+                    </button>
+                    <!--  <img class="img-responsive" src="img/logo.png"> -->
+                    <a class="navbar-brand" href="./homepage.html">SPARSHA AYURVEDA</a>
+                    <a class="navbar-brand caption" href="./homepage.html">The Touch of Wellness</a>
                 </div>
-        </nav>
-    </header>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li><a href="./homepage.html">Home</a></li>
+                    <li><a href="./ayurveda.html">Ayurveda</a></li>
+                    <li class="treatment-hover">
+                        <a class="visible-xs" data-toggle="collapse" href="#menu" aria-expanded="false" aria-controls="menu">Treatments<span class="collapse-icon"></span></a>
+                        <a class="visible-md visible-lg" href="./treatments.html">Treatments</a>
+                        <div id="menu" class="collapse treatments">
+                            <ul>
+                                <li><a href="./panchakarma.html">PANCHAKARMA</a></li>
+                                <li><a href="./aroma-therapy.html">AROMATHERAPY</a></li>
+                                <li><a href="./cosmetology.html">COSMTELOGY TREATMENTS</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <!--   <li><a href="./book-online.html">Book online</a></li> -->
+                    <li><a href="./contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
+<div class="body-section">
     <div class="container-fluid ayurveda">
         <div class="row">
             <div class="container">
@@ -68,27 +73,28 @@
                         <p><b>Pizhichil</b>:-pizhichil literally means squeezing.Here warm medicated oil isrepeatedly poured over the patient's body for a  particular time period.</p>
                         <p><b>Udwarthanam</b>:-is the procedure of massaging the body with herbal powders.It is found to be useful in obesity,diseases of neurological origin,skin diseases etc.</p>
                         <p><b>Abhyangam</b>:-the most convinient oleation therapy which when done along with fomentation gives much effect in stiffness and pain of the body.<p>
-                        <p><b>Tharpanam</b>:-Is used in eye diseases  like macular degeneration,computer eye strain, drooping of eyelid etc .Tharpanam  is the procedure of  pouring  medicated ghee over the eyes and reataining it for a particular time period.</p>
+                            <p><b>Tharpanam</b>:-Is used in eye diseases  like macular degeneration,computer eye strain, drooping of eyelid etc .Tharpanam  is the procedure of  pouring  medicated ghee over the eyes and reataining it for a particular time period.</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="container treatment-images">
-        <div class="row">
-            <div class="col-xs-12">
-                <div class="row">
-                    <div class="col-xs-12 col-sm-3 def-image">
-                        <img class="img-responsive" src="img/tharpanam.jpg">
-                    </div>
-                    <div class="col-xs-12 col-sm-3 def-image">
-                        <img class="img-responsive" src="img/nasyam.jpg">
-                    </div>
-                    <div class="col-xs-12 col-sm-3 def-image">
-                        <img class="img-responsive" src="img/tharpanam.jpg">
-                    </div>
-                    <div class="col-xs-12 col-sm-3 def-image">
-                        <img class="img-responsive" src="img/nasyam.jpg">
+        <div class="container treatment-images">
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-3 def-image">
+                            <img class="img-responsive" src="img/nasyam.jpg">
+                        </div>
+                        <div class="col-xs-12 col-sm-3 def-image">
+                            <img class="img-responsive" src="img/pachakarma2.jpg">
+                        </div>
+                        <div class="col-xs-12 col-sm-3 def-image">
+                            <img class="img-responsive" src="img/pachakarma1.jpg">
+                        </div>
+                        <div class="col-xs-12 col-sm-3 def-image">
+                            <img class="img-responsive" src="img/pachakarma.jpg">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -103,11 +109,8 @@
             </div>
         </div>
     </footer>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular.min.js"></script>
-<script src="js/ui-bootstrap-tpls-2.5.0.min.js"></script>
-<script src="js/app.js"></script>
-<script src="js/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/header.js"></script>
+    <script src="js/ui-bootstrap-tpls-2.5.0.min.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
